<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.odys.kotlintestapp.GameActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="353dp"
        android:layout_height="156dp"
        android:text="@string/test_long_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="313dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919">

        <RelativeLayout
            android:layout_width="272dp"
            android:layout_height="match_parent">

        </RelativeLayout>

        <LinearLayout
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/up" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="196dp"
                app:srcCompat="@drawable/arrow" />

            <Button
                android:id="@+id/down_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/down" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
